fix:global progress z-index cleanup:correct global progress component in mds

--- a/Frontend/src/styles/dialogs.scss
+++ b/Frontend/src/styles/dialogs.scss
@@ -9,7 +9,10 @@
    top:0;
    position:fixed;
    z-index:120;
- }
+}
+.globalProgress{
+  z-index:122;
+}
 .darken{
   @include darken();
 }
